# delta-live-tables-ingestion-framework-dabs

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  databricks.example.yml  pipeline_config.example.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
dlt_ingestion_framework/: cli.py
dlt_ingestion_framework/templates/: dlt_pipeline.sql.j2  job.yml.j2  pipeline.yml.j2
lakeflow_ingestion_framework/: cli.py
lakeflow_ingestion_framework/templates/: job.yml.j2  lakeflow_pipeline.sql.j2  tagging_script.sql.j2
tests/: conftest.py  helpers.py  test_resolve_bundle_var.py  test_templates.py  test_validation.py
